Issue #1256: Always show the link to access guest via VNC or Spice
This commit addresses an issue VNC column disappear when there is not enough
space (id screen is too small, that column is hidden. workaround:do CTRL - in
browser) , yet it is one of the most important columns.

--- a/ui/css/kimchi.css
+++ b/ui/css/kimchi.css
@@ -960,11 +960,6 @@
   }
 }
 
-#guest-content-container .wok-guest-list .wok-guest-list-header > span.column-vnc,
-#guest-content-container .wok-guest-list .wok-guest-list-body .wok-guest-list-item > span.column-vnc {
-  display: none;
-}
-
 #guest-content-container .wok-guest-list .wok-guest-list-header > span.column-vnc > a,
 #guest-content-container .wok-guest-list .wok-guest-list-body .wok-guest-list-item > span.column-vnc > a {
   font-weight: normal;
